# category-set-graph

./: README.md  category-set-graph.cabal
docs/: glossary.md  graph-homomorphism-as-natural-transformation.md
src/: Lib.hs  Types.hs
test/: Spec.hs
